src/objects/loan__J2_Segment__c.object
<CustomObject>
    <description>Metro 2 J2 Segment Object</description>
    <fields>
        <fullName>loan__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>J2 Segments</relationshipLabel>
        <relationshipName>J2_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Address_Indicator__c</fullName>
        <label>Address Indicator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Base_Segment_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Segment Definition</label>
        <referenceTo>loan__Base_Segment_Definition__c</referenceTo>
        <relationshipLabel>J2 Segments</relationshipLabel>
        <relationshipName>J2_Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Consumber_Information_Indicator__c</fullName>
        <label>Consumer Information Indicator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Consumer_Transaction_Type__c</fullName>
        <label>Consumer Transaction Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__ECOA_Code__c</fullName>
        <label>ECOA Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__First_Line_Address__c</fullName>
        <label>First Line Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Generation_Code__c</fullName>
        <label>Generation Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reserved__c</fullName>
        <label>Reserved</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Residence_Code__c</fullName>
        <label>Residence Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Second_Line_Address__c</fullName>
        <label>Second Line Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Segment_Identifier__c</fullName>
        <label>Segment Identifier</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__State__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Surname__c</fullName>
        <label>Surname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Telephone_Number__c</fullName>
        <label>Telephone Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>J2 Segment</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>J2 Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>